--- a/spring-boot-app/pom.xml
+++ b/spring-boot-app/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.abhishek</groupId>
+    <groupId>com.sanjay</groupId>
     <artifactId>spring-boot-demo</artifactId>
     <version>1.0</version>
 
